--- a/views/home.html
+++ b/views/home.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
+
 <body>
 
 <h1>Welcome to my Pets Page</h1>
-
+<a href="order/pets">Order a Pet</a>
 </body>
 </html>
